<resources>
    <string name="app_name">Budget Manager</string>
    <string name="menu_spend">Spend</string>
    <string name="menu_savings">Savings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sharing">Sharing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reminder">Reminder</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="feed_back">Feed Back</string>
    <string name="budget_history">Budget History</string>
    <string name="tvExpense">Expense :</string>
    <string name="tvBudget">Budget :</string>
    <string name="tvItemDaily">Daily Catalogs</string>
    <string name="tvItemWeekly">Weekly Catalogs</string>
    <string name="tvItemMonthly">Monthly Catalogs</string>
</resources>