<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:cardCornerRadius="500dp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/ivUserProfileImage"
                android:src="@drawable/w_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvUserName"
            android:text="Muhammad Aashir"
            app:layout_constraintLeft_toLeftOf="@id/cardView"
            android:textSize="27sp"
            app:layout_constraintRight_toRightOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvUserEmail"
            app:layout_constraintTop_toBottomOf="@id/tvUserName"
            app:layout_constraintStart_toStartOf="@id/tvUserName"
            app:layout_constraintEnd_toEndOf="@id/tvUserName"
            android:text="ashir11boss@gmail.com"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnProfileSettings"
            android:layout_width="@dimen/profileBtnSize"
            android:layout_height="wrap_content"
            android:text="@string/profile_settings"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="@id/tvUserEmail"
            app:layout_constraintEnd_toEndOf="@id/tvUserEmail"
            app:layout_constraintTop_toBottomOf="@id/tvUserEmail"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGeneralSettings"
            android:layout_width="@dimen/profileBtnSize"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/general_settings"
            app:layout_constraintEnd_toEndOf="@id/btnProfileSettings"
            app:layout_constraintStart_toStartOf="@id/btnProfileSettings"
            app:layout_constraintTop_toBottomOf="@id/btnProfileSettings" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReminder"
            android:layout_width="@dimen/profileBtnSize"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:layout_marginTop="@dimen/btnMargin10"
            app:layout_constraintEnd_toEndOf="@id/btnGeneralSettings"
            app:layout_constraintStart_toStartOf="@id/btnGeneralSettings"
            app:layout_constraintTop_toBottomOf="@id/btnGeneralSettings" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBudgetHistory"
            android:layout_width="@dimen/profileBtnSize"
            android:layout_height="wrap_content"
            android:text="@string/budget_history"
            android:layout_marginTop="@dimen/btnMargin10"
            app:layout_constraintEnd_toEndOf="@id/btnReminder"
            app:layout_constraintStart_toStartOf="@id/btnReminder"
            app:layout_constraintTop_toBottomOf="@id/btnReminder" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFeedBack"
            android:layout_width="@dimen/profileBtnSize"
            android:layout_height="wrap_content"
            android:text="@string/feed_back"
            android:layout_marginTop="@dimen/btnMargin10"
            app:layout_constraintEnd_toEndOf="@id/btnBudgetHistory"
            app:layout_constraintStart_toStartOf="@id/btnBudgetHistory"
            app:layout_constraintTop_toBottomOf="@id/btnBudgetHistory" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>